2018.8/_sources/plugins/available/phylogeny/raxml.txt
raxml: Construct a phylogenetic tree with RAxML.
================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: phylogeny:raxml.bib
   :all:
   :keyprefix: phylogeny:raxml:
   :labelprefix: phylogeny:raxml:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime phylogeny raxml [OPTIONS]

     Construct a phylogenetic tree with RAxML. See:
     https://sco.h-its.org/exelixis/web/software/raxml/

   Options:
     --i-alignment ARTIFACT PATH FeatureData[AlignedSequence]
                                     Aligned sequences to be used for
                                     phylogenetic reconstruction.  [required]
     --p-seed INTEGER                Random number seed for the parsimony
                                     starting tree. This allows you to reproduce
                                     tree results. If not supplied then one will
                                     be randomly chosen.  [optional]
     --p-n-searches INTEGER RANGE    The number of independent maximum likelihood
                                     searches to perform. The single best scoring
                                     tree is returned.  [default: 1]
     --p-n-threads INTEGER RANGE     The number of threads to use for
                                     multithreaded processing. Using more than
                                     one thread will enable the PTHREADS version
                                     of RAxML.  [default: 1]
     --p-raxml-version [SSE3|AVX2|Standard]
                                     Select a specific CPU optimization of RAxML
                                     to use. The SSE3 versions will run
                                     approximately 40% faster than the standard
                                     version. The AVX2 version will run 10-30%
                                     faster than the SSE3 version.  [default:
                                     Standard]
     --p-substitution-model [GTRGAMMA|GTRCATI|GTRCAT|GTRGAMMAI]
                                     Model of Nucleotide Substitution.  [default:
                                     GTRGAMMA]
     --o-tree ARTIFACT PATH Phylogeny[Unrooted]
                                     The resulting phylogenetic tree.  [required
                                     if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.phylogeny.methods import raxml

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Construct a phylogenetic tree with RAxML.

   Construct a phylogenetic tree with RAxML. See:
   https://sco.h-its.org/exelixis/web/software/raxml/

   Parameters
   ----------
   alignment : FeatureData[AlignedSequence]
       Aligned sequences to be used for phylogenetic reconstruction.
   seed : Int, optional
       Random number seed for the parsimony starting tree. This allows you to
       reproduce tree results. If not supplied then one will be randomly
       chosen.
   n_searches : Int % Range(1, None), optional
       The number of independent maximum likelihood searches to perform. The
       single best scoring tree is returned.
   n_threads : Int % Range(1, None), optional
       The number of threads to use for multithreaded processing. Using more
       than one thread will enable the PTHREADS version of RAxML.
   raxml_version : Str % Choices({'AVX2', 'SSE3', 'Standard'}), optional
       Select a specific CPU optimization of RAxML to use. The SSE3 versions
       will run approximately 40% faster than the standard version. The AVX2
       version will run 10-30% faster than the SSE3 version.
   substitution_model : Str % Choices({'GTRCAT', 'GTRCATI', 'GTRGAMMA', 'GTRGAMMAI'}), optional
       Model of Nucleotide Substitution.

   Returns
   -------
   tree : Phylogeny[Unrooted]
       The resulting phylogenetic tree.</pre>
       </div>
     </div>
   </div>